--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
         }
         stage('Deliver') {
             steps {
-                sh './jenkins/scripts/#!/usr/bin/env bash'
+                sh './jenkins/scripts/deliver.sh'
             }
         }
     }
